--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: 0;
+    font-family: "Poppins", serif;
 }
 
 body {
@@ -22,6 +26,10 @@ body {
             text-decoration: none;
         }
     }
+
+    & .menu {
+        display: none;
+    }
 }
 
 .main {
@@ -40,10 +48,69 @@ body {
             flex-direction: column;
             gap: 16px;
 
+            
+            }
+
+            & button:last-child {
+                color: #4ABBC2;
+                background: transparent;
+                border: 2px solid #4ABBC2;
+            }
+
             & p:first-child {
                 color: #FF2323;
+                font-size: 24px;
+                font-weight: 600;
             }
+
+            & h1{
+                font-size: 40px;
+                
             }
+
+            & p:last-child {
+                font-size: 18px;
+            }
+        }
+        & .btns {
+            display: flex;
+            gap: 16px;
+            & button {
+                padding: 14px 20px;
+                border-radius: 16px;
+                font-size: 18px;
+                font-weight: 700;
+                background-color: #4ABBC2;
+                border: none;
+                cursor: pointer;
+        }
+        }
+    }
+
+@media screen and (max-width: 1130px) {
+    .main {
+        flex-direction: column;
+
+        & .lado-esquerdo {
+            width: 100%;
+        }
+
+        & img {
+            width: 500px;
+            margin: auto;
+        }
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .cabecalho {
+
+        & .nav {
+            display: none;
+        }
+
+        & .menu {
+            display: flex;
         }
     }
 }
